Исправление отступов под normalize.css

--- a/mmlampadari/index.html
+++ b/mmlampadari/index.html
@@ -120,7 +120,7 @@
                 <div class="container hero-box__container container--fullsize">
                     <button class="hero-box__btn-arrow btn-reset" aria-label="Hero Box Button"></button>
                     
-                    <ul class="hero-box__list">
+                    <ul class="hero-box__list list-reset">
                         <li class="hero-box__item">
                             <h3 class="hero-box__title">
                                 Stai pensando ad un progetto?
